--- a/index.css
+++ b/index.css
@@ -1,8 +1,27 @@
 .heading {
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    text-align:center;
     background-image: url(https://media-exp1.licdn.com/dms/image/C4E22AQHZQM3p0aAOsw/feedshare-shrink_2048_1536/0?e=1588204800&v=beta&t=nTL5uMyAJHEHQkKRwsCTiSSoqLNhS7PQ8DNHkv38JOk);
+    width:auto;
+    height: 600px ;
+    padding: 75px;
+    color:white;
 }
+.navbar{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background-color: gray;
+}
+.navbar li{
+    display: inline-block;
+    padding: 20px;
+}
+.navbar a{
+    text-decoration: none;
+    color: paleturquoise;
+}
+
 h1{
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -10,7 +29,16 @@ h1{
     width: 800px; 
     height: 500px;"
     position: right;
-    content: ;;
+}
+#aboutme{
+    margin-top: 400px;
+    font-size: 20px;
+    font-style: italic;
+    line-height: 50px;
+}
+#inspirational_quote{
+    width: 800px;
+    height: 500px;
 }
 h3{
     font-family: Arial, Helvetica, sans-serif;
