--- a/index.css
+++ b/index.css
@@ -8,27 +8,37 @@
     color:white;
 }
 .navbar{
-    position: fixed;
+    position: fixed;    
     width: 100%;
     top: 0;
-    background-color: gray;
+    background-color:#55d6aa;
 }
 .navbar li{
     display: inline-block;
     padding: 20px;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
 }
 .navbar a{
     text-decoration: none;
-    color: paleturquoise;
+    color: rgb(6, 17, 17);
 }
-
+.Experience{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: burlywood;
+}
 h1{
     font-family: Arial, Helvetica, sans-serif;
+}
+h2{
+    background-color: silver;
+    text-transform: capitalize;
 }
 #my_photo{
     width: 800px; 
     height: 500px;"
-    position: right;
+    position: relative;    
 }
 #aboutme{
     margin-top: 400px;
@@ -39,8 +49,25 @@ h1{
 #inspirational_quote{
     width: 800px;
     height: 500px;
+    position: relative;
 }
 h3{
     font-family: Arial, Helvetica, sans-serif;
     text-emphasis-color: # ffffff;
+}
+.navbar a:hover{
+    color: blue;
+}
+.navbar a::before{
+    background-color: rgb(13, 13, 14);
+    height: 5px;
+    width: 0%;
+    top: 5px;
+    content: '';
+    display: block;
+    position: absolute;
+    transition: all ease-in-out 250ms;
+}
+.navbar a:hover::before{
+    width: 100%;
 }
