--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
     height: 600px ;
     padding: 75px;
     color:white;
+    margin: 10px;
 }
 .navbar{
     position: fixed;    
@@ -26,21 +27,25 @@
 }
 .Experience{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: burlywood;
+    background-color: rgba(24, 10, 85, 0.3);
+    margin: 10px; 
+    line-height: 30px;      
 }
 .Skills{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: burlywood;
+    background-color:  rgba(24, 10, 85, 0.3);
+    margin: 10px;
 }
 .Education{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.233);
+    margin: 10px;
 }
 .footer{
     font-family: Arial, Helvetica, sans-serif;    
-    background-color: lightblue;
+    background-color:  rgba(24, 10, 85, 0.3);
     font-weight: bold;
-    padding: top:40px;
-    
+    margin: 10px;
+        
 }
 h1{
     font-family: Arial, Helvetica, sans-serif;
@@ -48,16 +53,17 @@ h1{
 h2{
     background-color: silver;
     text-transform: capitalize;
+    text-align: center;
 }
 #my_photo{
-    width: 800px; 
-    height: 500px;
-    display: block;    
-    position: relative; 
-    vertical-align: middle;   
+    width: 600px; 
+    height: 400px;
+    display: ;    
+    position: relative;
+    border-radius: 70%;        
 }
 #aboutme{
-    margin-top: 400px;
+    margin-top: 10px;
     font-size: 20px;
     font-style: italic;
     line-height: 50px;
