--- a/index.css
+++ b/index.css
@@ -44,8 +44,7 @@
     font-family: Arial, Helvetica, sans-serif;    
     background-color:  rgba(24, 10, 85, 0.3);
     font-weight: bold;
-    margin: 10px;
-        
+    margin-bottom: 10px;        
 }
 h1{
     font-family: Arial, Helvetica, sans-serif;
@@ -54,6 +53,7 @@ h2{
     background-color: silver;
     text-transform: capitalize;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #my_photo{
     width: 600px; 
@@ -67,13 +67,6 @@ h2{
     font-size: 20px;
     font-style: italic;
     line-height: 50px;
-}
-#inspirational_quote{
-    width: 800px;
-    height: 500px;
-    display: block;
-    position: relative;
-    vertical-align: middle;
 }
 h3{
     font-family: Arial, Helvetica, sans-serif;
